--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ header {
   padding-bottom: 1rem;
 }
 
-.hero-height {
-  min-height: 85vh
+.hero-bg-fade {
+  mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 60%, rgba(0,0,0,0) 100%);
 }
 
 .indent {
