--- a/src/styles.css
+++ b/src/styles.css
@@ -5,5 +5,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Fira Code", sans-serif;
+  font-family: "Fira Code", monospace;
+  line-height: 1.4;
+  background-color: #dcdddf;
 }
