Make background lighter

--- a/src/prism-theme.css
+++ b/src/prism-theme.css
@@ -53,7 +53,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #BBB;
+	background: #dedede;
 }
 
 /* Inline code */
