--- a/src/styles.css
+++ b/src/styles.css
@@ -7,5 +7,5 @@ body,
   padding: 0;
   font-family: "Fira Code", monospace;
   line-height: 1.4;
-  background-color: #dcdddf;
+  background-color: #f8f8f8;
 }
