--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Fira Code", monospace;
+  font-family: "Fira Sans";
   line-height: 1.4;
   background-color: #f8f8f8;
 }
