--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,13 @@
 ---
+import '@fontsource/merriweather/400.css';
+import '@fontsource/merriweather/700.css';
+import '@fontsource/source-sans-pro';
+import '@fontsource-variable/jetbrains-mono';
+import { TbBrandGithub, TbBrandLinkedin, TbMail } from 'solid-icons/tb';
+import { FaBrandsOrcid } from 'solid-icons/fa';
+
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
@@ -8,44 +15,69 @@ const { title } = Astro.props;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class="bg-slate-50">
+    <nav
+      class="bg-slate-50 border-b border-slate-400 fixed top-0 left-0 right-0 z-50"
+    >
+      <div
+        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 gap-8"
+      >
+        <a href="/" class="">
+          <h1 class="text-2xl font-bold">J. Simon Richard</h1>
+        </a>
+        <a href="/blog" class="text-lg hover:underline">Blog</a>
+        <div class="flex-1"></div>
+        <div class="flex flex-row gap-4 mr-4">
+          <a href="mailto:jsimonrichard@gmail.com"><TbMail size={20} /></a>
+          <a href="https://github.com/jsimonrichard" target="_blank">
+            <TbBrandGithub size={20} />
+          </a>
+          <a href="https://www.linkedin.com/in/jsimonrichard/" target="_blank">
+            <TbBrandLinkedin size={20} />
+          </a>
+          <a href="https://orcid.org/0009-0006-7906-3179">
+            <FaBrandsOrcid size={20} />
+          </a>
+        </div>
+      </div>
+    </nav>
+
+    <slot />
+
+    <style is:global>
+      html,
+      body {
+        font-family:
+          Source Sans Pro,
+          system-ui,
+          sans-serif;
+        wdith: 100wh;
+      }
+      code {
+        font-family:
+          JetBrains Mono,
+          Menlo,
+          Monaco,
+          Lucida Console,
+          Liberation Mono,
+          DejaVu Sans Mono,
+          Bitstream Vera Sans Mono,
+          Courier New,
+          monospace;
+      }
+      h1,
+      h2,
+      h3 {
+        font-family: Merriweather, serif;
+      }
+    </style>
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
