Fix import intellisense error, use json for degrees in resume, make stuff bigger

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -59,7 +59,8 @@ const { title } = Astro.props;
           Source Sans Pro,
           system-ui,
           sans-serif;
-        wdith: 100wh;
+        font-size: 14pt;
+        width: 100wh;
       }
       code {
         font-family:
