--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import '@fontsource/merriweather/400.css';
 import '@fontsource/merriweather/700.css';
-import '@fontsource/source-sans-pro';
+import '@fontsource/source-sans-pro/400.css';
+import '@fontsource/source-sans-pro/700.css';
 import '@fontsource-variable/jetbrains-mono';
 import { TbBrandGithub, TbBrandLinkedin, TbMail } from 'solid-icons/tb';
 import { FaBrandsOrcid } from 'solid-icons/fa';
@@ -24,9 +25,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body class="bg-slate-50">
-    <nav
-      class="bg-slate-50 border-b border-slate-400 fixed top-0 left-0 right-0 z-50"
-    >
+    <nav class="bg-slate-50 fixed top-0 left-0 right-0 z-50 shadow-md">
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 gap-8"
       >
@@ -59,7 +58,7 @@ const { title } = Astro.props;
           Source Sans Pro,
           system-ui,
           sans-serif;
-        font-size: 14pt;
+        font-size: 13pt;
         width: 100wh;
       }
       code {
