--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,12 @@
 import Layout from '~/layouts/Layout.astro';
 import { Image } from 'astro:assets';
 import profileImage from '~/img/profile.jpg';
-import degrees from '~/content/resume/degrees.json';
+import { JSX } from 'solid-js';
+import { englishList } from '~/utils';
+import { getCollection } from 'astro:content';
+
+const education = await getCollection('education');
+const researchExp = await getCollection('researchExperience');
 ---
 
 <Layout title="J. Simon Richard">
@@ -16,7 +21,7 @@ import degrees from '~/content/resume/degrees.json';
           alt="J. Simon Richard"
           width={300}
           height={300}
-          class="absolute rounded-full w-full h-full object-cover"
+          class="absolute rounded-full w-full h-full object-cover shadow-md"
         />
       </div>
       <div class="self-center md:col-span-2">
@@ -32,41 +37,42 @@ import degrees from '~/content/resume/degrees.json';
         <p>
           Research interests:
 
-          <ul class="list-disc list-inside ml-4">
-            <li class="text-sky-700">Automated Theorem Proving (ATP)</li>
-            <li class="text-violet-700">AutoFormalization (AF)</li>
-            <li class="text-green-700">Large Language Model (LLM) reasoning</li>
-            <li class="text-pink-700">AI Safety</li>
-            <li class="text-yellow-700">Formal program verification</li>
+          <ul class="list-disc list-inside ml-4 columns-sm">
+            <li>Automated Theorem Proving (ATP)</li>
+            <li>AutoFormalization (AF)</li>
+            <li>Large Language Model (LLM) reasoning</li>
+            <li>AI Safety</li>
+            <li>Formal program verification</li>
           </ul>
         </p>
       </div>
     </section>
     <section id="status" class="grid my-16">
       <div
-        class="place-self-center p-6 bg-slate-200 rounded-lg max-w-screen-lg"
+        class="place-self-center p-6 bg-slate-200 rounded-lg max-w-screen-lg shadow-slate-400 shadow-sm"
       >
-        Currently completing my B.S. in Computer Science and Mathematics at
-        Cleveland State University (4.0 GPA), with research experience in both
-        industry and academia. Pursuing PhD opportunities in Computer
-        Science/Machine Learning.
+        Currently completing my <strong
+          >B.S. in Computer Science and Mathematics</strong
+        > at Cleveland State University (4.0 GPA), with research experience in both
+        industry and academia. Pursuing PhD opportunities in Computer Science/Machine
+        Learning.
       </div>
     </section>
 
-    <section id="education">
+    <section id="education" class="mb-16">
       <h2 class="text-2xl font-bold mb-4">Education</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-16">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         {
-          degrees.map((d) => (
-            <div class="border border-slate-200 rounded-lg p-6 max-w-screen-lg">
+          education.map((edu) => (
+            <div class="border border-slate-200 rounded-lg p-6 max-w-screen-lg shadow-md">
               <h3 class="text-lg font-bold mb-2">
-                {d.name} ({d.gpa} GPA)
+                {edu.data.name} ({edu.data.gpa} GPA)
               </h3>
               <p class="mb-2">
-                {d.graduation} &mdash;&nbsp;{d.location}
+                {edu.data.graduation} &mdash;&nbsp;{edu.data.location}
               </p>
               <ul class="list-disc list-outside ml-6">
-                {d.notes.map((n) => (
+                {edu.data.notes.map((n: string) => (
                   <li>{n}</li>
                 ))}
               </ul>
@@ -75,9 +81,39 @@ import degrees from '~/content/resume/degrees.json';
         }
       </div>
     </section>
-    <section id="research-experience">
+    <section id="research-experience" class="mb-16">
       <h2 class="text-2xl font-bold mb-4">Research Experience</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-16"></div>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        {
+          researchExp.map((r) => (
+            <div class="border border-slate-200 rounded-lg p-6 max-w-screen-lg shadow-md">
+              {r.data.cover && (
+                <Image
+                  src={r.data.cover}
+                  alt={r.data.name}
+                  class="mb-4 rounded-md"
+                />
+              )}
+              <h3 class="text-md font-bold mb-2">{r.data.name}</h3>
+              <p class="mb-2">
+                {r.data.start} &mdash; {r.data.end}
+                <br />
+                {r.data.location}
+                <br />
+                Advised by{' '}
+                {englishList(
+                  r.data.advisors.map((ad: string) => <strong>{ad}</strong>),
+                )}
+              </p>
+              <ul class="list-disc list-outside ml-6">
+                {r.data.notes.map((n) => (
+                  <li>{n}</li>
+                ))}
+              </ul>
+            </div>
+          ))
+        }
+      </div>
     </section>
     <section id="publications">
       <h2 class="text-2xl font-bold mb-4">Publications</h2>
