Create printable resume

--- a/src/components/BibItem.astro
+++ b/src/components/BibItem.astro
@@ -9,7 +9,7 @@
     counter-increment: item;
     display: flex;
     align-items: flex-start;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
 
   .bibliography-item:before {
