--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,10 +29,12 @@ const { title } = Astro.props;
       <div
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 gap-8"
       >
-        <a href="/" class="">
+        <a href="/" data-astro-prefetch>
           <h1 class="text-2xl font-bold">J. Simon Richard</h1>
         </a>
-        <a href="/blog" class="text-lg hover:underline">Blog</a>
+        <a href="/blog" class="text-lg hover:underline" data-astro-prefetch
+          >Blog</a
+        >
         <div class="flex-1"></div>
         <div class="flex flex-row gap-4 mr-4">
           <a href="mailto:jsimonrichard@gmail.com"><TbMail size={20} /></a>
