Fix plural issue on resume

--- a/src/pages/printable-resume.astro
+++ b/src/pages/printable-resume.astro
@@ -289,7 +289,7 @@ const contactInfo = [
                         <li>
                           {l.name}
                           <span class="text-slate-600">
-                            ({years} years; {l.level})
+                            ({years} year{years > 1 && 's'}; {l.level})
                           </span>
                         </li>
                       );
