--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta name="description" content="J. Simon Richard's Personal Website" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
@@ -27,26 +27,57 @@ const { title } = Astro.props;
   <body class="bg-slate-50">
     <nav class="bg-slate-50 fixed top-0 left-0 right-0 z-50 shadow-md">
       <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 gap-8"
+        class="max-w-screen-xl flex flex-col items-stretch md:flex-row md:items-center justify-between mx-auto p-4 gap-8"
       >
-        <a href="/" data-astro-prefetch>
-          <h1 class="text-2xl font-bold">J. Simon Richard</h1>
-        </a>
-        <a href="/blog" class="text-lg hover:underline" data-astro-prefetch
-          >Blog</a
+        <div class="flex flex-row items-center">
+          <a href="/" data-astro-prefetch>
+            <h1 class="text-2xl font-bold">J. Simon Richard</h1>
+          </a>
+          <div class="flex-1"></div>
+          <input class="hidden" id="nav-toggle" type="checkbox" />
+          <label class="md:hidden cursor-pointer" for="nav-toggle">
+            <span class="hamb-line">
+              <span class="sr-only">Toggle main menu</span>
+              <svg
+                class="w-5 h-5"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 17 14"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M1 1h15M1 7h15M1 13h15"></path>
+              </svg>
+            </span>
+          </label>
+        </div>
+
+        <div
+          class="w-full flex-1 hidden nav-menu md:flex md:w-auto flex-row items-center"
         >
-        <div class="flex-1"></div>
-        <div class="flex flex-row gap-4 mr-4">
-          <a href="mailto:jsimonrichard@gmail.com"><TbMail size={20} /></a>
-          <a href="https://github.com/jsimonrichard" target="_blank">
-            <TbBrandGithub size={20} />
-          </a>
-          <a href="https://www.linkedin.com/in/jsimonrichard/" target="_blank">
-            <TbBrandLinkedin size={20} />
-          </a>
-          <a href="https://orcid.org/0009-0006-7906-3179">
-            <FaBrandsOrcid size={20} />
-          </a>
+          <a href="/blog" class="text-lg hover:underline" data-astro-prefetch
+            >Blog</a
+          >
+          <div class="flex-1"></div>
+          <div class="flex flex-row gap-4 mr-4">
+            <a href="mailto:jsimonrichard@gmail.com"><TbMail size={20} /></a>
+            <a href="https://github.com/jsimonrichard" target="_blank">
+              <TbBrandGithub size={20} />
+            </a>
+            <a
+              href="https://www.linkedin.com/in/jsimonrichard/"
+              target="_blank"
+            >
+              <TbBrandLinkedin size={20} />
+            </a>
+            <a href="https://orcid.org/0009-0006-7906-3179">
+              <FaBrandsOrcid size={20} />
+            </a>
+          </div>
         </div>
       </div>
     </nav>
@@ -87,5 +118,12 @@ const { title } = Astro.props;
         font-family: Merriweather, serif;
       }
     </style>
+
+    <script>
+      document.getElementById('nav-toggle')!.addEventListener('change', (e) => {
+        document.querySelector('.nav-menu')!.classList.toggle('hidden');
+        document.querySelector('.nav-menu')!.classList.toggle('flex');
+      });
+    </script>
   </body>
 </html>
