Add new article on nmvc

--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -28,7 +28,7 @@ const { Content } = await post.render();
       </div>
     </div>
 
-    <article class="prose prose-slate mb-24">
+    <article class="prose prose-slate mb-24 max-w-full">
       <Content />
     </article>
 
