--- a/src/components/blog/Tag.astro
+++ b/src/components/blog/Tag.astro
@@ -3,8 +3,9 @@
 </a>
 
 <style>
+  @reference '~/global.css';
   a {
-    @apply bg-slate-200 py-0.5 px-1 rounded-md hover:underline;
+    @apply bg-secondary py-0.5 px-1 rounded-md hover:underline;
     color: currentColor !important;
   }
 </style>
