--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,7 +11,7 @@ posts.sort(
 ---
 
 <Layout title="J. Simon Richard | Blog">
-  <main class="max-w-screen-md mx-auto px-4 pt-24 md:pt-48 min-h-screen">
+  <main class="max-w-3xl mx-auto px-4 pt-24 md:pt-48 min-h-screen">
     {
       posts.map((post: any) => (
         <div class="mb-12">
