--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,14 @@
 ---
+import '../global.css';
 import '@fontsource/merriweather/400.css';
 import '@fontsource/merriweather/700.css';
 import '@fontsource/source-sans-pro/400.css';
 import '@fontsource/source-sans-pro/700.css';
 import '@fontsource-variable/jetbrains-mono';
-import { TbBrandGithub, TbBrandLinkedin, TbMail } from 'solid-icons/tb';
-import { FaBrandsOrcid } from 'solid-icons/fa';
 import PostHog from '../components/posthog.astro';
+import ThemeHeadScript from '../components/theme-head-script.astro';
+import ThemeDropdown from '../components/theme-dropdown';
+import SocialIcons from '../components/SocialIcons.astro';
 
 interface Props {
   title: string;
@@ -24,12 +26,13 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <ThemeHeadScript />
     <PostHog />
   </head>
-  <body class="bg-slate-50">
-    <nav class="bg-slate-50 fixed top-0 left-0 right-0 z-50 shadow-md">
+  <body class="bg-background">
+    <nav class="bg-background fixed top-0 left-0 right-0 z-50 shadow-md">
       <div
-        class="max-w-screen-xl flex flex-col items-stretch md:flex-row md:items-center justify-between mx-auto p-4 gap-8"
+        class="max-w-7xl flex flex-col items-stretch md:flex-row md:items-center justify-between mx-auto p-4 gap-8"
       >
         <div class="flex flex-row items-center">
           <a href="/" data-astro-prefetch>
@@ -65,20 +68,10 @@ const { title } = Astro.props;
             >Blog</a
           >
           <div class="flex-1"></div>
-          <div class="flex flex-row gap-4 mr-4">
-            <a href="mailto:jsimonrichard@gmail.com"><TbMail size={20} /></a>
-            <a href="https://github.com/jsimonrichard" target="_blank">
-              <TbBrandGithub size={20} />
-            </a>
-            <a
-              href="https://www.linkedin.com/in/jsimonrichard/"
-              target="_blank"
-            >
-              <TbBrandLinkedin size={20} />
-            </a>
-            <a href="https://orcid.org/0009-0006-7906-3179">
-              <FaBrandsOrcid size={20} />
-            </a>
+          <div class="flex flex-row gap-4 mr-4 items-center">
+            <ThemeDropdown client:only="react" />
+            <div class="h-6 w-px bg-border mr-2"></div>
+            <SocialIcons />
           </div>
         </div>
       </div>
@@ -86,7 +79,7 @@ const { title } = Astro.props;
 
     <slot />
 
-    <footer class="bg-slate-200">
+    <footer class="bg-secondary dark:bg-card">
       <div class="text-center p-4">
         Copywrite © {new Date().getFullYear()} J. Simon Richard
       </div>
