--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,9 @@ const { title } = Astro.props;
     <PostHog />
   </head>
   <body class="bg-background">
-    <nav class="bg-background fixed top-0 left-0 right-0 z-50 shadow-md">
+    <nav
+      class="bg-background fixed top-0 left-0 right-0 z-50 shadow-md dark:shadow-gray-900"
+    >
       <div
         class="max-w-7xl flex flex-col items-stretch md:flex-row md:items-center justify-between mx-auto p-4 gap-8"
       >
